deployment/k8s/frontend/base/istio/authorizationpolicy/allow-ingress-authorization-policy.yaml
# SPDX-License-Identifier: Apache-2.0
# © Crown Copyright 2026. This work has been developed by the National Digital Twin Programme and is legally attributed to the UK's Department for Business, Innovation, Science and Trade (BIST) as the governing entity.

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-frontend
spec:
  selector:
    matchLabels:
      io.kompose.service: nova-frontend
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-ingress/sa/istio-ingress"]
      to:
        - operation:
            methods: ["GET", "POST"]
      when:
        - key: request.auth.claims[groups]
          values:
            - nova_access
